@@ -16,6 +16,7 @@ import androidx.core.content.ContextCompat;
 
 import com.google.android.material.bottomnavigation.BottomNavigationView;
 
+import java.text.DecimalFormat;
 import java.util.ArrayList;
 
 public class HomeActivity extends AppCompatActivity {
@@ -23,6 +24,7 @@ public class HomeActivity extends AppCompatActivity {
     ImageView bar1,bar2,bar3,bar4;
     ArrayList<TextView> aT, aT1, aT2;
     ArrayList<ImageView> aI;
+    static String currency;
     BottomNavigationView navbar;
 
     @Override
@@ -183,7 +185,7 @@ public class HomeActivity extends AppCompatActivity {
                     totaltrans = Math.abs(totaltrans);
                     aT.get(i).setTextColor(ContextCompat.getColor(this, R.color.rosso_bordeaux));
                 }
-                aT.get(i).setText(totaltrans + " €");
+                aT.get(i).setText(totaltrans.toString() +" "+ currency);
                 System.out.println(totaltrans);
                 i++;
             }while(cur.moveToNext() && i < 5);
@@ -220,8 +222,13 @@ public class HomeActivity extends AppCompatActivity {
                 totalcash += cur.getDouble(cur.getColumnIndex("money"));
             }while(cur.moveToNext());
         }
+        cur = db.queryUserFull();
+        if(cur.moveToFirst()){
+            currency = cur.getString(cur.getColumnIndex("currency"));
+        }
         db.close();
-        String strcash = Double.valueOf(totalcash).toString()+" €";
+        DecimalFormat df = new DecimalFormat("#.00");
+        String strcash = new Double(df.format(totalcash)).toString()+" "+currency;
         cash.setText(strcash);
     }
 
